srcs/tester/base/stack/empty/log.txt
./base/stack/empty/patched.cpp:7:2: error: use of undeclared identifier 'ft'
 ft::stack<int> mystack;
 ^
./base/stack/empty/patched.cpp:10:26: error: use of undeclared identifier 'mystack'
 for (int i=1;i<=10;i++) mystack.push(i);
                         ^
./base/stack/empty/patched.cpp:12:10: error: use of undeclared identifier 'mystack'
 while (!mystack.empty())
         ^
./base/stack/empty/patched.cpp:14:9: error: use of undeclared identifier 'mystack'
 sum += mystack.top();
        ^
./base/stack/empty/patched.cpp:15:2: error: use of undeclared identifier 'mystack'
 mystack.pop();
 ^
5 errors generated.
